#
# Copyright © 2009 Cisco Systems, Inc.  All rights reserved.
#

ACLOCAL_AMFLAGS = -I config

SUBDIRS = src

EXTRA_DIST = \
        VERSION \
        config/openrcm_get_version.sh \
        test/Makefile \
        test/pnp/client.c \
        test/pnp/listener.c \
        test/pnp/server.c \
        test/pnp/talker.c \
        test/spinners/cm_spin.c \
        test/spinners/cm_spin2.c \
        test/spinners/spin.c
