#
# Copyright © 2009 Cisco Systems, Inc.  All rights reserved.
#

ACLOCAL_AMFLAGS = -I config

SUBDIRS = src test/pnp test/spinners

EXTRA_DIST = \
        VERSION \
        autogen.pl \
        config/openrcm_get_version.sh \
        test/pnp/client.c \
        test/pnp/client2.c \
        test/pnp/listener.c \
        test/pnp/listener_iovec.c \
        test/pnp/server.c \
        test/pnp/talker.c \
        test/pnp/talker_iovec.c \
        test/pnp/talker_iovec_nb.c \
        test/spinners/cm_spin.c \
        test/spinners/cm_spin2.c \
        test/spinners/spin.c
