#
# Copyright (c) 2009      Cisco Systems, Inc.  All rights reserved. 
#
# $COPYRIGHT$
# 
# Additional copyrights may follow
# 
# $HEADER$
#

dist_pkgdata_DATA += runtime/help-openrcm-runtime.txt

headers += runtime/runtime.h

libopenrcm_la_SOURCES += \
        runtime/orcm_init.c \
        runtime/orcm_finalize.c
