#
# Copyright 2010 Cisco Systems, Inc.  All rights reserved.
#

test_PROGRAMS =          \
        client          \
        client2         \
        listener        \
        listener_iovec  \
        server          \
        talker          \
        talker_iovec    \
        talker_iovec_nb \
        udp_size        \
        unicast_stress

AM_LDFLAGS = @LIBS@

LDADD=../../src/libopenrcm.la
