#
# Copyright 2010-2011 Cisco Systems, Inc.  All rights reserved.
#

test_PROGRAMS =             \
        client_1_0          \
        client_2_0          \
        listener_1_0        \
        listener_iovec_1_0  \
        server_1_0          \
        talker_1_0          \
        talker_iovec_1_0    \
        talker_iovec_2_0    \
        udp_size_1_0        \
        unicast_stress_1_0  \
        unicast_stress_2_0

AM_LDFLAGS = @LIBS@

LDADD=../../src/libopenrcm.la
